Inicio do site - modificando

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ img {
 
 /* Home */
 #home {
-    background-image: url(../images/clouds.jpg);
+    background-image: url(#);
     background-position: center;
     background-size: cover;
 }
