--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap');
 
-/* Variables */
+/* Variables *
 :root {
     --c-brand: #3653f8;
     --c-brand-rgb: 248, 54, 145;
@@ -11,6 +11,18 @@
     --f-main: "Bai Jamjuree", sans-serif;
     --transition: all .4s cubic-bezier(.165, .84, .44, 1);
     --shadow: 0px 15px 40px rgba(0, 0, 0, 0.1);
+}
+*/
+
+:root {
+--c-brand: #008080;
+--c-brand-rgb: 0, 128, 128;
+--c-dark: #303050;
+--c-body: #636383;
+--c-light: #f6f6f6;
+--f-main: "Bai Jamjuree", sans-serif;
+--transition: all .4s cubic-bezier(.165, .84, .44, 1);
+--shadow: 0px 15px 40px rgba(0, 0, 0, 0.1);
 }
 
 /* Reset & Helpers */
@@ -170,7 +182,7 @@ img {
 
 /* Home */
 #home {
-    background-image: url(#);
+    background-image: url(../img/homepage01.jpg);
     background-position: center;
     background-size: cover;
 }
