--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,55 @@ img {
     background-position: center;
     background-size: cover;
 }
+  
+  .accordion {
+    width: 100%;
+    padding: 0 5px;
+    border: 2px solid var(--c-brand);
+    cursor: pointer;
+    border-radius: 50px;
+    display: flex;
+    margin: 10px 0;
+    align-items: center;
+  }
+  
+  .accordion .icon {
+    margin: 0 10px 0 0;
+    width: 30px;
+    height: 30px;
+    background: url(https://raw.githubusercontent.com/Tusar78/responsive-accordion/main/images/toggle-bg.png)
+      no-repeat 8px 7px var(--c-brand);
+    border-radius: 50%;
+    float: left;
+    transition: all 0.5s ease-in;
+  }
+  
+  .accordion h5 {
+    font-size: 22px;
+    margin: 0;
+    padding: 3px 0 0 0;
+    font-weight: normal;
+    color: var(--c-dark);
+  }
+  
+  .active .icon {
+    background: url(https://raw.githubusercontent.com/Tusar78/responsive-accordion/main/images/toggle-bg.png)
+      no-repeat 8px -25px #fff;
+  }
+  
+  .panel {
+    padding: 0 15px;
+    border-left: 1px solid var(--c-brand);
+    margin-left: 25px;
+    font-size: 14px;
+    text-align: justify;
+    overflow: hidden;
+    max-height: 0;
+    transition: all 0.3s ease-in;
+  }
 
+
+  
 /* Services */
 .service-icon {
     width: 60px;
