--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,8 @@ img {
     background-position: center;
     background-size: cover;
 }
+
+/*
   
   .accordion {
     width: 100%;
@@ -233,7 +235,78 @@ img {
     transition: all 0.3s ease-in;
   }
 
+*/
 
+
+.heading{
+  text-align: center;
+  font-size: 30px;
+  padding:20px;
+  margin-bottom: 20px;
+}
+
+.accordion-container{
+  padding:0 20px;
+}
+
+.accordion-container .accordion{
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.accordion-container .accordion.active .accordion-heading{
+  background: var(--c-brand);
+}
+
+.accordion-container .accordion.active .accordion-heading h3{
+  color:var(--c-light);
+}
+
+.accordion-container .accordion.active .accordion-heading i{
+  color:var(--c-light);
+  transform: rotate(180deg);
+  transition: transform .2s .1s;
+}
+
+.accordion-container .accordion.active .accordion-content{
+  display: block;
+}
+
+.accordion-container .accordion .accordion-heading{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap:10px;
+  background: var(--c-light);
+  border:2px solid var(--c-dark);
+  padding:15px 20px;
+}
+
+.accordion-container .accordion .accordion-heading h3{
+  font-size: 18px;;
+}
+
+.accordion-container .accordion .accordion-heading i{
+  font-size: 25px;;
+}
+
+.accordion-container .accordion .accordion-content{
+  padding:15px 20px;
+  border:2px solid var(--c-dark);
+  font-size: 15px;
+  background: var(--c-light);
+  border-top: 0;
+  display: none;
+  animation: animate .2s linear backwards;
+  line-height: 2;
+  transform-origin: top;
+}
+
+@keyframes animate {
+  0%{
+    transform: scaleY(0);
+  }
+}
   
 /* Services */
 .service-icon {
