--- a/css/style.css
+++ b/css/style.css
@@ -453,65 +453,39 @@ img {
     top: 0;
 }
 
-.footer{
-	background-color: var(--c-dark);
-    padding: 70px 0;
+.footer {
+  margin-top: 15px;
 }
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
+
+
+/*=====  BOTÃO DE VOLTAR AO TOPO  =====*/
+
+.scroll-up-btn {
+  position: fixed;
+  width: 41px;
+  height: 45px;
+  right: 30px;
+  bottom: 30px;
+  text-align: center;
+  line-height: 50px;
+  color: var(--c-light);
+  background: var(--c-brand);
+  border-radius: 6px;
+  font-size: 30px;
+  z-index: 9999;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
-.footer-col h4{
-	font-size: 18px;
-	color: var(--c-light);
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+
+.scroll-up-btn.show {
+  bottom: 30px;
+  opacity: 1;
+  pointer-events: auto;
 }
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: var(--c-brand);
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-}
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
-}
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: var(--c-light);
-	text-decoration: none;
-	font-weight: 300;
-	color: var(--c-light);
-	display: block;
-	transition: all 0.3s ease;
-}
-.footer-col ul li a:hover{
-	color: var(--c-light);
-	padding-left: 8px;
-}
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: var(--c-brand);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: var(--c-light);
-	transition: all 0.5s ease;
-}
-.footer-col .social-links a:hover{
-	color: var(--c-dark);
-	background-color: var(--c-light);
-}
+
+/*=====  BOTÃO DE VOLTAR AO TOPO  =====*/
 
 /*responsive*/
 @media(max-width: 767px){
