--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ img {
 
 /* Home */
 #home {
-    background-image: url(../img/homepage01.jpg);
+    background-image: url(../img/WhatsApp\ Image\ 2023-10-07\ at\ 09.53.17.jpeg);
     background-position: center;
     background-size: cover;
 }
