--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ img {
 
 /* Home */
 #home {
-    background-image: url(../img/Fundo01.jpeg);
+    background-image: url(../img/TelaInicialProfissional.jpeg);
     background-position: center;
     background-size: cover;
 }
