--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ img {
 /* Home */
 #home {
     background-image: url(../img/TelaInicialProfissional.jpeg);
-    background-position: center;
+    background-position: center top;
     background-size: cover;
 }
 
